--- a/Web1/404.html
+++ b/Web1/404.html
@@ -53,7 +53,7 @@
  font-family: Arial, Helvetica, sans-serif;  
  }  
  body {  
- background-color: #FFF;  
+ background-color: rgb(255, 255, 255);  
  }  
  </style>  
  </head>  
@@ -64,8 +64,7 @@
  <h2>Ooops! Page not found...</h2>  
  <h3>Thats F***ing Stupid!!</h3>  
  <h4>U Mad Bro?</h4>  
- <h5>Seriously this is a problem. Send PM to site Admin with your link above and tell us where you were going, Thank You!<h5>  
+<img src="http://lh5.ggpht.com/_9F9_RUESS2E/SpV5Yi8Vv5I/AAAAAAAAA4E/W9-J8eMLokM/s800/50-Cool-and-Creative-404-Error-Pages-25.jpg" class="troll"/>
  </div>  
- <div id="trollbox"> <img src="https://twimg0-a.akamaihd.net/profile_images/2312704942/Troll_Face.jpg" class="troll"/></div>  
  </body>  
  </html>
